<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/upload_layout_root_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background">
    <RelativeLayout
        android:id="@+id/sync_data_auto_upload_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:visibility="gone">
        <TextView
            android:id="@+id/sync_data_auto_upload_title"
            style="@style/sync_data_tilte_style"
            android:text="@string/sync_data_auto_upload_title"/>
        <TextView
            android:id="@+id/sync_data_auto_upload_remark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/sync_data_auto_upload_title"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="6dp"
            android:textSize="@dimen/common_text_size"
            android:textColor="@color/text_common_gray_color"
            android:text="@string/sync_data_auto_upload_remark"/>
        <TextView
            android:id="@+id/sync_data_auto_upload_context"
            style="@style/sync_data_context_style"
            android:text="@string/sync_data_auto_upload_context"
            android:layout_below="@id/sync_data_auto_upload_title"/>
        <ImageView
            android:layout_width="16dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/next"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/scene_list_divider_height"
        android:background="@color/scene_list_divider_color"/>
    <RelativeLayout
        android:id="@+id/sync_data_upload_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white">
        <TextView
            android:id="@+id/sync_data_upload_title"
            style="@style/sync_data_tilte_style"
            android:text="@string/sync_data_upload_title"/>
        <TextView
            android:id="@+id/sync_data_upload_context"
            style="@style/sync_data_context_style"
            android:text="@string/sync_data_upload_context"
            android:layout_below="@id/sync_data_upload_title"/>
        <ImageView
            android:layout_width="16dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/next"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/scene_list_divider_height"
        android:background="@color/scene_list_divider_color"/>
    <RelativeLayout
        android:id="@+id/sync_data_uploading_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white">
        <TextView
            android:id="@+id/sync_data_uploading_title"
            style="@style/sync_data_tilte_style"
            android:text="@string/sync_data_uploading_title"/>
        <TextView
            android:id="@+id/sync_data_uploadding_context"
            style="@style/sync_data_context_style"
            android:text="@string/sync_data_uploading_context"
            android:layout_below="@id/sync_data_uploading_title"/>
        <ImageView
            android:layout_width="16dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/next"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/scene_list_divider_height"
        android:background="@color/scene_list_divider_color"/>

    <RelativeLayout
        android:id="@+id/sync_data_uploaded_list_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white">
        <TextView
            android:id="@+id/sync_data_uploaded_list_title"
            style="@style/sync_data_tilte_style"
            android:text="@string/sync_data_uploaded_list_title"/>
        <TextView
            android:id="@+id/sync_data_uploaded_list_context"
            style="@style/sync_data_context_style"
            android:text="@string/sync_data_uploaded_list_context"
            android:layout_below="@id/sync_data_uploaded_list_title"/>
        <ImageView
            android:layout_width="16dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/next"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/scene_list_divider_height"
        android:background="@color/scene_list_divider_color"/>
</LinearLayout>