<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab2_button_start" />

        <Button
            android:id="@+id/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab2_button_stop" />

        <Button
            android:id="@+id/button_readclear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab2_button_readclear" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_oncecnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab2_textView_oncecnt" />

        <TextView
            android:id="@+id/textView_readoncecnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />

        <TextView
            android:id="@+id/textView_tocnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab2_textView_tocnt" />

        <TextView
            android:id="@+id/textView_readallcnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />

        <TextView
            android:id="@+id/textView_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_set_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab2_textView_set_status" />

        <TextView
            android:id="@+id/textView_invstate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="......." />
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

 		android:fillViewport="true"
         
            <ListView
                android:id="@+id/listView_epclist"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:overScrollMode="always"
                android:scrollbars="horizontal|vertical" >

            </ListView>
    </HorizontalScrollView>

</LinearLayout>