<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="false"
        android:scrollbars="none"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <TextView
                    android:id="@+id/sync_data_base_title"
                    style="@style/sync_data_tilte_style"
                    android:text="@string/sync_data_base_title"/>
                <TextView
                    android:id="@+id/sync_data_base_context"
                    android:layout_below="@id/sync_data_base_title"
                    style="@style/sync_data_context_style"
                    android:text="@string/sync_data_base_context"/>
                <CheckBox
                    android:id="@+id/sync_data_base_checkbox"
                    style="@style/sync_data_checkbox_style"/>
                <ImageView
                    android:id="@+id/sync_data_base_img"
                    style="@style/sync_data_img_style"
                    android:layout_toLeftOf="@id/sync_data_base_checkbox"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/scene_list_divider_height"
                android:background="@color/scene_list_divider_color"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:visibility="gone">
                <TextView
                    android:id="@+id/sync_data_contact_title"
                    style="@style/sync_data_tilte_style"
                    android:text="@string/sync_data_contact_title"/>
                <TextView
                    android:id="@+id/sync_data_contact_context"
                    android:layout_below="@id/sync_data_contact_title"
                    style="@style/sync_data_context_style"
                    android:text="@string/sync_data_contact_context"/>
                <CheckBox
                    android:id="@+id/sync_data_contact_checkbox"
                    style="@style/sync_data_checkbox_style"/>
                <ImageView
                    android:id="@+id/sync_data_contact_img"
                    style="@style/sync_data_img_style"
                    android:layout_toLeftOf="@id/sync_data_contact_checkbox"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/scene_list_divider_height"
                android:background="@color/scene_list_divider_color"
                android:visibility="gone"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:visibility="gone">
                <TextView
                    android:id="@+id/sync_data_schedule_title"
                    style="@style/sync_data_tilte_style"
                    android:text="@string/sync_data_schedule_title"/>
                <TextView
                    android:id="@+id/sync_data_schedule_context"
                    android:layout_below="@id/sync_data_schedule_title"
                    style="@style/sync_data_context_style"
                    android:text="@string/sync_data_schedule_context"/>
                <CheckBox
                    android:id="@+id/sync_data_schedule_checkbox"
                    style="@style/sync_data_checkbox_style"/>
                <ImageView
                    android:id="@+id/sync_data_schedule_img"
                    style="@style/sync_data_img_style"
                    android:layout_toLeftOf="@id/sync_data_schedule_checkbox"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/scene_list_divider_height"
                android:visibility="gone"
                android:background="@color/scene_list_divider_color"/>
            <RelativeLayout
                android:id="@+id/sync_data_inquest_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:visibility="gone"
                >
                <TextView
                    android:id="@+id/sync_data_inquest_title"
                    style="@style/sync_data_tilte_style"
                    android:text="@string/sync_data_inquest_title"/>
                <TextView
                    android:id="@+id/sync_data_inquest_context"
                    style="@style/sync_data_context_style"
                    android:layout_below="@id/sync_data_inquest_title"
                    android:text="@string/sync_data_inquest_context"/>
                <ImageView
                    android:id="@+id/sync_data_inquest_shrink"
                    android:layout_width="14dp"
                    android:layout_height="8dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="14dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/selection_screen_group_down"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/scene_list_divider_height"
                android:visibility="gone"
                android:background="@color/scene_list_divider_color"/>
            <com.gofirst.scenecollection.evidence.view.customview.ListViewInScrollView
                android:id="@+id/sync_history_data_list"
                style="@style/sync_data_listview_style">

            </com.gofirst.scenecollection.evidence.view.customview.ListViewInScrollView>

        </LinearLayout>
    </ScrollView>
    <CheckBox
        android:id="@+id/sync_data_clear_data"
        style="@style/sync_data_clear_check_style"
        android:text="清空数据并更新"/>
    <Button
        android:id="@+id/sync_data_start_donwload_btn"
        style="@style/common_button_style"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:text="开始下载"/>
</LinearLayout>